Fixed layout bug

--- a/client/styles/scss/app/_header.scss
+++ b/client/styles/scss/app/_header.scss
@@ -21,9 +21,9 @@
 	// @include clearfix();
 	@include display-flex();
 	@include flex(1);
-	@include media-breakpoint-down(sm) {
-		display: block;
-	}
+	// @include media-breakpoint-down(sm) {
+	// 	display: block;
+	// }
 	
 	& .navbar-toggle {
 		position: relative;
